chore(content): 清理例题练习小节与纯例题专册，同步文档索引